# Song2Vec

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  compare.py  main.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml
benchmarks/: profiler.py
core/: __init__.py  audio.py  dtw.py  features.py  pattern_matching.py  similarity.py
features/: bass_features.py
models/: bass_similarity_logreg.joblib
similarity/: __init__.py  similarity_engine.py
templates/: index.html
tests/: test_bass_features.py  test_dummy.py
train/: __init__.py  build_pairs_from_folder.py  train_similarity_model.py
utils/: __init__.py  audio_loader.py
visualization/: __init__.py  spectrogram.py
web/: __init__.py  api.py
