[project]
name = "song2vec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=2.3.0",
    "joblib>=1.3",
    "librosa>=0.10.0",
    "matplotlib>=3.7",
    "numpy>=1.23",
    "pandas>=2.0",
    "pytest>=7.4",
    "ruff>=0.15.7",
    "scikit-learn>=1.2",
    "scipy>=1.10.0",
    "soundfile>=0.12",
    "werkzeug>=2.3.0",
]
