[project]
name = "song2vec"
version = "0.1.0"
description = "Quantifying Musical Similarity"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.3.0",
    "joblib>=1.3",
    "librosa>=0.10.0",
    "line-profiler>=5.0.2",
    "matplotlib>=3.7",
    "numba>=0.64.0",
    "numpy>=1.23",
    "pandas>=2.0",
    "pytest>=7.4",
    "ruff>=0.15.7",
    "scikit-learn>=1.2",
    "scipy>=1.10.0",
    "soundfile>=0.12",
    "werkzeug>=2.3.0",
]
